fixed mobile gap error

--- a/assets/css/stylemobile.css
+++ b/assets/css/stylemobile.css
@@ -47,7 +47,7 @@ line-height: 15px;
 
 .content-container {
 padding: 5px;
-width: 100%;
+width: 90%;
 float: left;
 height: auto;
 margin-left: 10%;
@@ -157,8 +157,6 @@ background-position: center;
 height: auto;
 width: 100%;
 margin-bottom: 80px;
-left: 0;
-top: 0;
 }
 
 .img-circle {
